Link updation of server

--- a/index.html
+++ b/index.html
@@ -47,11 +47,12 @@
                                     <div class="stats-card">
                                                 <!--see later using Javascript-->
                                     </div>
-
                     </div>
-
             </div>
-
+                <div class="information">
+                       <p>REMEMBER: <br>Access required prior activation of the temporary data server, making it ideal 
+for demo or testing purposes. Below is the link to get access for data server temporarily: <br><a href="https://cors-anywhere.herokuapp.com/" target="_blank">https://cors-anywhere.herokuapp.com/</a></p>
+                 </div>
             <script src="metric.js"></script>
 </body>
 </html>
